# my_university_c

./: Algebra_det_search.c  CMakeLists.txt  TestFileForStudy.c  algeom_vectors.c
Algem/: CMakeLists.txt  Inverse_Matrix.c  Matrix_det_gauss.c  Matrix_det_gauss2.c  SLE_solver.c  StartFile.c  Vectors.c  func.h  input.txt  output.txt
C Basic 2 sem/Math_and_Mech/: Matrix_saddle_point.c  Prost_matrix.c  Under_elem_metrix.c  arctg_taylor.c  det_first_str.c  matrix_heapsort.c  matrix_qsort.c  vector_mergesort.c
C Basic 2 sem/Tour_1/: Ex1_1.c  Ex1_2.c
C Basic 2 sem/Tour_2/: Ex2_1.c
C Basic/Tour_1/: Ex1-1.c  Ex1-2.c  Ex1-3.c  Ex1-4.c  Ex1_5.c
C Basic/Tour_10/: Ex10_1.c  Ex10_2.c  Ex10_3.c
C Basic/Tour_11/: Ex11_1.c  Ex11_2.c  Ex11_3.c
C Basic/Tour_12/: Ex12_1.c  Ex12_2.c  Ex12_3.c  Ex12_4.c
C Basic/Tour_13/: Ex13_1.c  Ex13_2.c  Ex13_3.c  Ex13_9.c
C Basic/Tour_14/: Ex14_1.c  Ex14_2.c  Ex14_3.c
C Basic/Tour_15/: Ex15_1.c  Ex15_2.c  Ex15_3.c
C Basic/Tour_16/: Ex16_1.c  Ex16_11.c  Ex16_2.c  Ex16_4.c  Ex16_6.c  Ex16_7.c  Ex16_9.c
C Basic/Tour_2/: Ex2_1.c  Ex2_2.c  Ex2_3.c  Ex2_4.c  Ex2_6.c  Ex2_7.c
C Basic/Tour_3/: Ex3_1.c  Ex3_2.c  Ex3_3.c  Ex3_4.c  Ex3_5.c  Ex3_7.c
C Basic/Tour_5/: 1.txt  Ex5_1.c  Ex5_2.c  Ex5_3.c  Ex5_4.c
C Basic/Tour_6/: Ex6_1.c  Ex6_2.c  Ex6_3.c  lol.txt
C Basic/Tour_7/: Ex7_1.c  Ex7_2.c  Ex7_3.c  Ex7_4.c  Ex7_5.c  input.txt  output.txt
C Basic/Tour_8/: Ex8_1.c  Ex8_2.c  Ex8_3.c
C Basic/Tour_9/: Ex9_1.c  Ex9_2.c  Ex9_3.c  Ex9_6.c
